<<<<<<< HEAD
<<<<<<< HEAD
[B]Version 1.1.211[/B]
- americass - removed (site defunct) - cherry-picked from upstream
- Fix video playback for FlareSolverr scraped sites (e.g. luxuretv) - cherry-picked from upstream
- Add upstream sync tracking system with automated scripts
- xxxtube - new site - cherry-picked from upstream
- sxyprn - fix search
- allclassic - fixes #1742
- kissjav - fix thumbnails, playback fixes #1743
- xxxvideo - fix pagination

[B]Version 1.1.204[/B]
- Testing Infrastructure: Expanded test suite from 449 to 622 tests (38% increase)
- Testing Coverage: Achieved 38% overall code coverage (up from 37%)
- Core Module Testing: Added comprehensive tests for url_dispatcher (44%→96%), adultsite (66%→100%), basics (17%→48%), favorites (11%→24%), and utils (30%→31%)
- Site Testing: Added 22 new tests for thothub.py utility functions (21%→31% coverage)
- Test Quality: All 622 tests passing with proper fixtures and mocking
- Code Quality: Improved test infrastructure with better fixtures, helpers, and organization

[B]Version 1.1.203[/B]
- sexyporn - add new site with soup-based listings, categories, search, and playback
- watchmdh - migrate listings to BeautifulSoup and add pagination fixture coverage
- porntn/yrprno/netfapx/perverzija/vaginanl/viralvideosporno - soup migrations with deterministic fixtures and tests
- update migration checklists and NEW_SITES status markers

[B]Version 1.1.197[/B]
- awmnet - migrate to BeautifulSoup for more reliable parsing
- erogarga - add missing duration parameter to video listings
- javbangers - migrate pagination to BeautifulSoup for better reliability
- longvideos - fix parsing to handle videos without title attributes
- luxuretv - fix parsing to handle videos without title attributes
- pornhoarder - fix image parsing to support both src and data-src attributes
- pornmz - fix video parsing and HD quality detection, improve pagination
- reallifecam - fix lazy-loading images to prioritize data-src over placeholder